--- a/src/main/resources/templates/forgotPasswordView.html
+++ b/src/main/resources/templates/forgotPasswordView.html
@@ -3,88 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        form {
-            max-width: 400px;
-            margin: 0 auto;
-            margin-top: 40px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-
-        input[type="submit"] {
-            background-color: #4caf50;
-            color: white;
-            padding: 12px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease-in-out;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        .container {
-            text-align: center;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .philosophy {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-
-        .comfort {
-            font-size: 16px;
-            color: #666;
-        }
-
-    </style>
-    <title>Forgot Password</title>
+    <link rel="stylesheet" type="text/css" href="/css/menu_style.css">
+    <title>Забыл пароль</title>
 </head>
 <body>
-
 <div class="container">
     <h2>Забыли пароль?</h2>
-
     <div class="philosophy">
         <p>"В мире, полном забот и суеты, пароль - всего лишь временное забытие. Вернитесь к спокойствию."</p>
     </div>
-
     <div class="comfort">
         <p>Мы все забываем время от времени. Введите свою почту ниже и нажмите кнопку, что восстановить ваши данные...</p>
     </div>
-
     <form action="/sendEmail" method="post" th:class="${darkDesign} ? 'dark' : ''">
-        EMAIL <input type="text" id="email" name="email"><br><br>
+        ПОЧТА <input type="text" id="email" name="email"><br><br>
         <input type="submit" value="Отправить письмо"/><br><br>
     </form>
 </div>
-
 </body>
 </html>
