--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -3,68 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        .container {
-            text-align: center;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-            text-align: center;
-            text-decoration: none;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .button-primary {
-            color: #fff;
-            background-color: #3498db;
-            border: 2px solid #3498db;
-        }
-
-        .button-secondary {
-            color: #fff;
-            background-color: #e74c3c;
-            border: 2px solid #e74c3c;
-        }
-
-        .button-forgot {
-            color: #3498db;
-            text-decoration: none;
-            font-size: 14px;
-            margin-top: 10px;
-            display: block;
-        }
-    </style>
-    <title>Login Page</title>
+    <link rel="stylesheet" type="text/css" href="/css/menu_style.css">
+    <title>Авторизация</title>
 </head>
 <body>
-
 <div class="container">
-    <h2>Login Page</h2>
-
+    <h2>Вход/Создание аккаунта</h2>
     <a href="/registry" class="button button-primary">Зарегистрироваться</a>
     <a href="/signIN" class="button button-secondary">Войти</a>
     <a href="/forgotPassword" class="button button-forgot">Забыл пароль?</a>
 </div>
-
 </body>
 </html>
