--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,174 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Профиль</title>
-    <style>
-        .dark-mode {
-            background-color: #222;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            margin: 21px;
-            background-color: #f4f4f4;
-            color: #333;
-            justify-content: center;
-            align-items: center;
-        }
-
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-
-
-        .profile-container {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .profile-buttons {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
-
-        .profile-button {
-            color: #fff;
-            text-decoration: none;
-            transition: background-color 0.3s ease-in-out;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            text-align: center;
-        }
-
-        .profile-info {
-            margin-top: 20px;
-            text-align: left;
-        }
-
-        .info-item {
-            margin-bottom: 10px;
-        }
-
-        .info-label {
-            font-weight: bold;
-        }
-
-        .info-value {
-            margin-left: 10px;
-        }
-        .edit-password {
-            background-color: #4caf50;
-        }
-
-        .edit-email {
-            background-color: #3498db;
-        }
-
-        .dark_mode {
-            background-color: #342d1e;
-        }
-
-        .toggle-dark-mode {
-            background-color: #2c3e50;
-        }
-
-        .profile-button:hover {
-            background-color: #555;
-        }
-        a.head{
-            color: #3498db;
-            text-decoration: none;
-            margin-right: 10px;
-            transition: color 0.3s ease-in-out;
-            cursor: pointer;
-            display: inline-block;
-            padding: 8px 4px;
-            padding-left: 6%;
-            padding-right: 6%;
-            border-radius: 4px;
-            border: 1px solid #3498db;
-            text-align: center;
-        }
-        a.darkhead, a.darkoper{
-            color: #aec6cc;
-            text-decoration: none;
-            margin-right: 10px;
-            transition: color 0.3s ease-in-out;
-            cursor: pointer;
-            display: inline-block;
-            padding: 8px 4px;
-            padding-left: 6%;
-            padding-right: 6%;
-            border-radius: 4px;
-            border: 1px solid #12496e;
-            text-align: center;
-        }
-
-        a:hover {
-            color: #1f618d;
-            background-color: #ecf0f1;
-        }
-        a.darkhead:hover, a.darkoper:hover {
-            color: #1f618d;
-            background-color: #97b5bd;
-        }
-
-
-        header {
-            background-color: #3498db;
-            margin-left: -21px;
-            margin-right: -21px;
-            margin-top: -21px;
-            padding: 7px;
-            text-align: center;
-            color: #fff;
-            white-space: nowrap;
-        }
-        header.darkhead {
-            background-color: #1f618d;
-            margin-left: -21px;
-            margin-right: -21px;
-            margin-top: -21px;
-            padding: 7px;
-            text-align: center;
-            color: #aec6cc;
-            white-space: nowrap;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            white-space: nowrap;
-        }
-
-        nav a.head {
-            color: #fff;
-            text-decoration: none;
-            transition: color 0.3s ease-in-out;
-            border: none;
-            white-space: nowrap;
-        }
-        nav a.darkhead {
-            color: #aec6cc;
-            text-decoration: none;
-            transition: color 0.3s ease-in-out;
-            border: none;
-            white-space: nowrap;
-        }
-        nav a:hover {
-            background-color: #d6f5fc;
-            color: #2d6675;
-        }
-        body.dark-mode div div{
-            color: #aec6cc;
-        }
-        body.dark-mode div div h1{
-            color: #aec6cc;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/basic_style.css">
 </head>
 <header th:class="${darkDesign} ? 'darkhead' : 'head'">
     <nav th:class="${darkDesign} ? 'darkhead' : 'head'">
@@ -182,7 +15,7 @@
 <body th:class="${darkDesign} ? 'dark-mode' : ''">
 <div class="profile-container">
     <div class="profile-container">
-        <h1>Профиль</h1>
+        <h1 style="text-align: center">Профиль</h1>
         <div class="profile-info">
             <div class="info-item">
                 <span class="info-label">Имя пользователя: </span>
@@ -213,7 +46,6 @@
                 <span class="info-value" th:text="${numDoneSubTask}"></span>
             </div>
         </div><hr>
-
         <div class="profile-buttons"><a href="/editPassword" class="profile-button edit-password">Изменить пароль</a></div>
         <div class="profile-buttons"><a href="/editEmail" class="profile-button edit-email">Изменить почту</a></div>
         <div class="profile-buttons"><a href="/darkMode" class="profile-button toggle-dark-mode">Переключиться на темную тему</a></div>
