--- a/src/main/resources/templates/signIN.html
+++ b/src/main/resources/templates/signIN.html
@@ -3,78 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        .container {
-            text-align: center;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-label {
-            display: block;
-            font-size: 16px;
-            margin-bottom: 5px;
-        }
-
-        .form-input {
-            width: 80%;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            text-align: center;
-            text-decoration: none;
-            cursor: pointer;
-            border-radius: 5px;
-            background-color: #3498db;
-            color: #fff;
-            border: 2px solid #3498db;
-            transition: background-color 0.3s ease;
-        }
-    </style>
-    <title>Login Form</title>
+    <link rel="stylesheet" type="text/css" href="/css/menu_style.css">
+    <title>Вход</title>
 </head>
 <body>
-
 <div class="container">
-    <h2>Вход</h2>
-
+    <h2>ВХОД</h2>
     <form action="/login" method="post">
         <div class="form-group">
             <label class="form-label" for="username">Имя пользователя:</label>
             <input class="form-input" type="text" id="username" name="username" required/>
         </div>
-
         <div class="form-group">
             <label class="form-label" for="password">Пароль:</label>
             <input class="form-input" type="password" id="password" name="password" required/>
         </div><br>
-
-        <input type="submit" class="button" value="Войти"/>
+        <input type="submit" class="button2" value="Войти"/>
     </form>
 </div>
-
 </body>
 </html>
