--- a/src/main/resources/templates/about_page.html
+++ b/src/main/resources/templates/about_page.html
@@ -16,7 +16,7 @@
 <h1 style="text-align: center">О сайте</h1>
 <div class="row">
     <div class="block">
-        <img src="https://asbtasktracker.com/wp-content/uploads/2022/01/tasktracker-logo-hor-green.png" alt="Image-logo">
+        <img src="/images/tasktracker-logo-hor-green.png" alt="Image-logo">
         <p>Приветствую тех, кто посетил мой сайт. Мой сайт является проектом в области разработки приложений на Spring Framework.</p>
         <hr><p>Проект можно рассматривать не только как компонент резюме. Если Вам понравился функционал сайта, то вы вполне можете использовать его для личных или рабочих целей. Я буду очень этому рад.</p>
         <hr><p>Вы также можете отправлять обратную связь о сайте на адрес nikitaets2016@gmail.com. Буду рад вашим сообщениям!</p>
@@ -28,24 +28,12 @@
     <div>
     </div>
     <div class="block">
-        <img src="your_image_url_4" alt="Image 4">
-        <p>Текст блока 4</p>
-    </div>
-</div>
-<div class="row">
-    <div class="block">
-        <img src="your_image_url_1" alt="Image 1">
-        <p>Текст блока 1</p>
-    </div>
-    <div>
-    </div>
-</div>
-<div class="row">
-    <div>
-    </div>
-    <div class="block">
-        <img src="your_image_url_4" alt="Image 4">
-        <p>Текст блока 4</p>
+        <img src="/images/nikita.jpg" alt="Nikita">
+        <p>Создатель данного таск-трэкера любит программировать и занимается этим с 14 лет. Начал я с олимпиадного программирования.</p>
+        <hr><p>К данному моменту у меня есть много достижений в этой области: ежегодно я участвую в 10-15 олимпиадах различных этапов.</p>
+        <hr><p>Я занимал призовое место на полуфинале чемпионата Северной Евразии NERC ICPC, а также был участником полуфинала мира ICPC</p>
+        <hr><p>Сейчас меня интересует Enterprise-разработка на JAVA, поэтому я решил сделать демонстрационный проект для своего будущего резюме</p>
+        <hr><p>Все мои проекты вы можете найти по адресу https://github.com/HiKvern</p>
     </div>
 </div>
 </body>
