make adaptive menu-page (4 views) for phone

--- a/src/main/resources/templates/forgotPasswordView.html
+++ b/src/main/resources/templates/forgotPasswordView.html
@@ -12,11 +12,11 @@
     <div class="philosophy">
         <p>"В мире, полном забот и суеты, пароль - всего лишь временное забытие. Вернитесь к спокойствию."</p>
     </div>
-    <div class="comfort">
+    <div class="comfort" style="margin-top: 20px">
         <p>Мы все забываем время от времени. Введите свою почту ниже и нажмите кнопку, что восстановить ваши данные...</p>
     </div>
     <form action="/sendEmail" method="post" th:class="${darkDesign} ? 'dark' : ''">
-        ПОЧТА <input type="text" id="email" name="email"><br><br>
+        <span style="font-size: 22px">ПОЧТА</span> <input class="form-input" type="text" id="email" name="email"><br><br>
         <input type="submit" value="Отправить письмо"/><br><br>
     </form>
 </div>
