--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,8 +7,8 @@
     <title>Авторизация</title>
 </head>
 <body>
-<div class="container">
-    <h2>Вход/Создание аккаунта</h2>
+<div class="container" style="margin-top: 33%; padding-top: 50px;">
+    <h2>Мой Аккаунт</h2><br>
     <a href="/registry" class="button button-primary">Зарегистрироваться</a>
     <a href="/signIN" class="button button-secondary">Войти</a>
     <a href="/forgotPassword" class="button button-forgot">Забыл пароль?</a>
