--- a/src/main/resources/templates/signIN.html
+++ b/src/main/resources/templates/signIN.html
@@ -18,7 +18,7 @@
             <label class="form-label" for="password">Пароль:</label>
             <input class="form-input" type="password" id="password" name="password" required/>
         </div><br>
-        <input type="submit" class="button2" value="Войти"/>
+        <input style="padding: 16px 65px" type="submit" class="button2" value="Войти"/>
     </form>
 </div>
 </body>
