--- a/src/main/resources/templates/forgotPasswordView.html
+++ b/src/main/resources/templates/forgotPasswordView.html
@@ -12,7 +12,7 @@
     <div class="philosophy">
         <p>"В мире, полном забот и суеты, пароль - всего лишь временное забытие. Вернитесь к спокойствию."</p>
     </div>
-    <div class="comfort" style="margin-top: 20px">
+    <div class="comfort adaptive">
         <p>Мы все забываем время от времени. Введите свою почту ниже и нажмите кнопку, что восстановить ваши данные...</p>
     </div>
     <form action="/sendEmail" method="post" th:class="${darkDesign} ? 'dark' : ''">
