--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,7 +7,7 @@
     <title>Авторизация</title>
 </head>
 <body>
-<div class="container" style="margin-top: 33%; padding-top: 50px;">
+<div class="container adaptive">
     <h2>Мой Аккаунт</h2><br>
     <a href="/registry" class="button button-primary">Зарегистрироваться</a>
     <a href="/signIN" class="button button-secondary">Войти</a>
